--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -11,7 +11,7 @@ jobs:
     name: unit tests and linting
     strategy:
       matrix:
-        nextcloudVersion: [ stable30 ]
+        nextcloudVersion: [ stable30, master ]
         phpVersion: [ 8.1, 8.2, 8.3 ]
         include:
           - nextcloudVersion: stable27
@@ -20,6 +20,8 @@ jobs:
             phpVersion: 8.1
           - nextcloudVersion: stable29
             phpVersion: 8.1
+          - nextcloudVersion: master
+            phpVersion: 8.3
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout for nightly CI
@@ -201,6 +203,10 @@ jobs:
           - nextcloudVersion: stable29
             phpVersionMajor: 8
             phpVersionMinor: 1
+            database: mysql
+          - nextcloudVersion: master
+            phpVersionMajor: 8
+            phpVersionMinor: 3
             database: mysql
     runs-on: ubuntu-20.04
     container:
