--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -11,7 +11,7 @@ jobs:
     name: unit tests and linting
     strategy:
       matrix:
-        nextcloudVersion: [ stable30 ]
+        nextcloudVersion: [ stable30, master ]
         phpVersion: [ 8.1, 8.2, 8.3 ]
         # This condition is temporary and can be removed once Nextcloud 31 support is added in the integration app for the release/2.7 branch
         isReleaseBranch:
@@ -23,9 +23,15 @@ jobs:
             phpVersion: 8.1
           - nextcloudVersion: stable29
             phpVersion: 8.1
+        exclude:
+          - isReleaseBranch: true
+            nextcloudVersion: master
           - isReleaseBranch: false
             nextcloudVersion: master
-            phpVersion: 8.3
+            phpVersion: 8.1
+          - isReleaseBranch: false
+            nextcloudVersion: master
+            phpVersion: 8.2
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout for nightly CI
