--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -196,8 +196,9 @@ jobs:
         phpVersionMajor: [ 8 ]
         phpVersionMinor: [ 1, 2, 3 ]
         database: [ mysql ]
+        # This condition is temporary and can be removed once Nextcloud 31 support is added in the integration app for the release/2.7 branch
         isReleaseBranch:
-          - true
+          - ${{ inputs.branch == 'release/2.7'}}
         include:
           # Each database once on the newest Server with preinstalled PHP version
           - nextcloudVersion: stable30
