ci: mark nightly releases as pre-release
Signed-off-by: Saw-jan <saw.jan.grg3e@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,7 +83,7 @@ jobs:
           name: ${{ steps.tag.outputs.currenttag }}
           files: /tmp/build/${{ steps.build_release.outputs.app_id }}-${{ steps.build_release.outputs.version }}.tar.gz
           draft: false
-          prerelease: false
+          prerelease: ${{ endsWith( steps.tag.outputs.currenttag , 'nightly' ) }}
 
       - name: Publish to appstore
         if: ${{ startsWith( steps.tag.outputs.currenttag , 'v' ) && !endsWith( steps.tag.outputs.currenttag , 'nightly' ) }}
