--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -116,10 +116,12 @@ jobs:
       - name: PHP & Vue Unit Tests
         run: |
           git clone --depth 1 https://github.com/nextcloud/groupfolders.git -b ${{ matrix.nextcloudVersion }} server/apps/groupfolders
+          git clone --depth 1 https://github.com/nextcloud/user_oidc.git server/apps/user_oidc
           mkdir -p server/apps/integration_openproject
           cp -r `ls -A | grep -v 'server'` server/apps/integration_openproject/
           cd server
           ./occ a:e groupfolders
+          ./occ a:e user_oidc
           ./occ a:e integration_openproject
           cd apps/integration_openproject
           # The following if block can be removed once Nextcloud no longer supports PHP 8.0
