docs: add docs for extra apps
Signed-off-by: Saw-jan <saw.jan.grg3e@gmail.com>

--- a/dev/.env
+++ b/dev/.env
@@ -1,4 +1,11 @@
-APP_DIR=
+# Nextcloud configurations
+NEXTCLOUD_IMAGE_TAG=
+
+# OpenProject configurations
+OPENPROJECT_IMAGE_TAG=
+OPENPROJECT_DEV_HOST=
+OPENPROJECT_RAILS__RELATIVE__URL__ROOT=
+OPENPROJECT_EDITION=
 
 # run keycloak
 # KEYCLOAK=:keycloak.yaml
