--- a/.github/workflows/nighlty-ci-release-branch.yml
+++ b/.github/workflows/nighlty-ci-release-branch.yml
@@ -1,5 +1,8 @@
-name: Nightly CI Release
+name: Nightly CI (Release branch)
 
+# workflow can be scheduled ONLY from DEFAULT branch
+# > This event will only trigger a workflow run if the workflow file is on the default branch.
+# See: https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#schedule
 on:
   schedule:
     - cron: '0 23 * * *' # run at 10 PM UTC
